eliminate usage of guava